--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="assets/assets/icon/icon-192x192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="assets/assets/icon/icon-192x192.png"/>
 
   <title>myapp</title>
   <link rel="manifest" href="manifest.json">
